# Diffusion-Handwriting-Generation.pytorch

./: .gitignore  .isort.cfg  Makefile  README.md  prepare_data.py  pyproject.toml  setup.cfg
data/: splits.json
data/best_exp/: config.yml  report.json
diffusion_handwriting_generation/: __init__.py  attention.py  checkpoint.py  cnn.py  conditioning.py  config.py  dataset.py  inference.py  loss.py  model.py  preprocessing.py  scheduler.py  test.py  text_style.py  tokenizer.py  train.py  transform.py
diffusion_handwriting_generation/configs/: base.yml  best.yml  best_gpu.yml
diffusion_handwriting_generation/utils/: clip_grad.py  distributed.py  env.py  experiment.py  helpers.py  io.py  log.py  nn.py  path.py  preprocessing.py  utils.py  vis.py
tests/: test_model.py
