[project]
name = "diffusion-handwriting-generation-pytorch"
version = "0.1.0"
description = "Diffusion Model for Online Handwriting Generation"
authors = [
    {name = "Aleksandr Kalashnikov", email = "sleep3r@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.2,<2.0",
    "addict>=2.4.0",
    "fire>=0.5.0",
    "ruamel-yaml>=0.17.21",
    "torch>=1.13.1,<2.3",
    "torchvision>=0.14.1,<0.18",
    "matplotlib>=3.6.3",
    "opencv-python>=4.7.0.68",
    "gitpython>=3.1.30",
    "pytest>=7.2.1",
    "tqdm>=4.64.1",
    "mypy>=1.1.1",
    "ruff>=0.0.258",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diffusion_handwriting_generation"]


[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_sort_within_sections=true
line_length = 100
sections=["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]


[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E741"]


[tool.black]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
